--- a/src/app/ieo/components/ieo-info/ieo-info.component.html
+++ b/src/app/ieo/components/ieo-info/ieo-info.component.html
@@ -7,7 +7,7 @@
       </div>
       <div class="fs-content" *ngIf="IEOData">
         <div class="bittorrent">
-          <img src="assets/img/ieo/bittorrent.svg" alt="">
+          <img src="assets/img/ieo/e-tao.png" alt="">
         </div>
         <div class="btc-session">
           <div class="b-s-title">
