--- a/src/assets/scss/pages/ieo/_common-ieo.scss
+++ b/src/assets/scss/pages/ieo/_common-ieo.scss
@@ -81,12 +81,12 @@
 			.button-wr{
 
 				.standart-btn{
-					@media(max-width: 480px){
+					@media(max-width: 992px){
 						
 						padding: 13px .7em;
 					}
 					span{
-						@media(max-width: 480px){
+						@media(max-width: 992px){
 
 							font-size: 1.3em;
 
@@ -122,6 +122,29 @@
 			padding-top: 1em;
 			align-items: center;
 			margin-bottom: 1.3em;
+			.wrap-input{
+				margin-right: .8em;
+				width: 17em;
+				@media (max-width: 840px) {
+
+					width: calc(100% - 9.3em);
+					
+				}
+				@media (max-width: 420px){
+					
+					width: 100%;
+				}
+				
+			}
+			@media (max-width: 840px){
+				flex-direction: column;
+
+
+				form{
+					width: 100%;
+
+				}
+			}
 			.icon-wr{
 				width: auto;
 				margin-right: 1.45em;
@@ -131,10 +154,7 @@
 				margin-right: 1.8em;
 				padding: 0;
 			}
-			.wrap-input{
-				margin-right: .8em;
-				width: 17em;
-			}
+
 			.link-wr{
 				padding: 0;
 			}
@@ -154,7 +174,7 @@
 		.link-wr{
 			padding-left: 3.05em;
 			@media(max-width: 720px){
-			padding-left: 2.75em;
+				padding-left: 2.75em;
 
 			}
 			padding-top: .1em;
@@ -193,6 +213,7 @@
 				width: 2.75em;
 			}
 			svg{
+				    width: auto;
 				height: 100%;
 			}
 		}
@@ -372,7 +393,7 @@
 				width: 9.6em;
 				margin: 0 auto;
 				@media(max-width: 720px){
-					width: 11em;
+					width: 13em;
 				}
 				.standart-btn{
 					padding: 16px .7em;
@@ -452,6 +473,11 @@
 				font-weight: 500;
 				font-size: .61em;
 				line-height: .85;
+				z-index: 2;
+				@media(max-width: 780px){
+					padding: .55em .62em;
+					width: 5.8em;
+				}
 			}
 		}
 		.img-part{
@@ -480,6 +506,9 @@
 			padding: .9em 1.1em;
 			@media(max-width: 992px){
 				width: 100%;
+			}
+			@media(max-width: 780px){
+				    padding: .9em .5em;
 			}
 		}
 		.title-wr{
@@ -513,7 +542,7 @@
 				width: 100%;
 				font-size: 1.1em;
 				&:not(:last-child){
-					margin-bottom: 1em;	
+					margin-bottom: .7em;	
 				}
 				
 				
@@ -551,7 +580,10 @@
 				font-size: .58em;
 				line-height: 1.25;
 				color: #747B8D;
+				@media(min-width: 992px){
+
 				height: 3.55em;
+				}
 				overflow: hidden;
 				// position: relative;
 				
@@ -561,10 +593,21 @@
 			display: flex;
 		}
 		.button-wr{
+			@media(max-width: 780px){
+				width: 100%;
+
+					margin: 0;
+				&~.button-wr{
+					margin-left: 0.65em;
+				}
+			}
 			margin-right: .65em;
 			.standart-btn{
 				padding: 8px .8em;
 				font-size: inherit;
+				@media(max-width: 780px){
+					padding: 12px .8em;
+				}
 				span{
 					font-size: .65em;
 					font-weight: 400;
@@ -589,6 +632,10 @@
 			padding: 1.3em 20px;
 			padding-top: 2em;
 			padding-bottom: 3.5em;
+			@media(max-width: 780px){
+			padding-bottom: 1.5em;
+
+			}
 
 		}
 		.title-wr{
@@ -617,8 +664,12 @@
 			position: relative;
 			@media(max-width: 780px){
 				width: 100%;
-				margin-bottom: 1em;
+				margin-bottom: 2em;
 				font-size: 1.3em;
+				border: none;
+				padding-bottom: 0;
+				padding-top: 0;
+
 			}
 			&:not(:last-child){
 				&::after{
@@ -644,7 +695,9 @@
 			display: flex;
 			justify-content: center;
 			height: 4.3em;
-
+			@media(max-width: 780px){
+				margin-bottom: 1em;	
+			}
 			img{
 				display: block;
 				height: 100%;
@@ -820,6 +873,15 @@
 				background: #237BEF;
 				border-radius: 3px;
 			}
+		}
+	}
+
+	.different-comunication-left{
+		display: flex;
+		align-items: center;
+		@media (max-width: 840px) {
+			width: 100%;
+			margin-bottom: 1em;
 		}
 	}
 }
