--- a/src/assets/scss/pages/ieo/_ieo-requirements.scss
+++ b/src/assets/scss/pages/ieo/_ieo-requirements.scss
@@ -4,7 +4,7 @@
 		margin: 0 auto;
 		padding: 1.3em 20px;
 		@media(max-width: 992px){
-			font-size: 1.4em;
+			font-size: 1.1em;
 			padding-top: 1em;
 		}
 	}
@@ -31,7 +31,7 @@
 		justify-content: space-between;
 		align-items: center;
 		@media(max-width: 992px){
-			padding: .9em 1.1em;
+			padding: 1.3em 1.1em;
 			flex-direction: column;
 			align-items: flex-start;
 		}
@@ -63,13 +63,21 @@
 			padding: 0;
 			font-weight: 500;
 			cursor: pointer;
+			@media(max-width: 992px){
+				font-size: .9em;
+				margin-top: .8em;
+				margin-bottom: .8em;
+			}
 		}
 	}
 	.requirement-text-wr{
 		.requirement-text{
 			overflow: hidden;
-			    height: 7.3em;
+			height: 7.45em;
 			transition: .3s;
+			@media(max-width: 992px){
+				height: 8.3em;
+			}
 		}
 	}
 	.requirement-text{
@@ -78,7 +86,7 @@
 		width: 100%;
 		@media(max-width: 992px){
 			max-width: unset;
-			margin-bottom: .65em;
+			margin-bottom: 0;
 		}
 		p{
 			font-size: .91em;
@@ -88,6 +96,9 @@
 			margin-top: 1em;
 			line-height: 1.37;
 			color: #5E5F74;
+			@media(max-width: 992px){
+				font-size: .9em;
+			}
 		}
 	}
 	.requirement-status{
@@ -95,12 +106,18 @@
 		display: flex;
 		align-items: center;
 		text-decoration: none;
+		@media(max-width: 992px){
+			margin-top: .7em;
+		}
 		svg{
 			display: block;
 			margin-right: 7px;
 		}
 		p{
 			font-size: .8em;
+			@media(max-width: 992px){
+				font-size: .9em;
+			}
 		}
 	}
 }
