--- a/src/assets/scss/pages/ieo/_ieo_how_it_work.scss
+++ b/src/assets/scss/pages/ieo/_ieo_how_it_work.scss
@@ -1,6 +1,6 @@
 .ieo_how_it_work{
 	@media (max-width: 992px) {
-		font-size: 1.6em;
+		font-size: 1.2em;
 	}
 	.ieo_how_it_work-title{
 		    margin-bottom: 2.5em;
@@ -41,6 +41,7 @@
 		position: relative;
 		@media (max-width: 992px) {
 			max-width: unset;
+			    padding: 0 1.7em;
 		}
 		.pics-container{
 			height: 4em;
