--- a/src/assets/scss/pages/ieo/ieo-first-screen.scss
+++ b/src/assets/scss/pages/ieo/ieo-first-screen.scss
@@ -17,7 +17,7 @@
 	background-position: 100% 100%;
 	background-repeat: no-repeat;
 	@media(max-width: 992px){
-		font-size: 1.3em;
+		font-size: 1.1em;
 	}
 	.fs-wr{
 		max-width: calc(73.7em + 40px);
@@ -131,7 +131,8 @@
 		@media(max-width: 992px){
 			width: 100%;
 			max-width: 507px;
-			margin: 0 auto 1em;
+			margin: 0 auto 0;
+			font-size: 1.1em;
 		}
 		td{
 			font-weight: 500;
@@ -179,6 +180,10 @@
 	}
 	.amount{
 		margin-bottom: 1em;
+		@media (max-width: 992px) {
+			margin-bottom: 2em;
+
+		}
 		p{
 
 			font-weight: 500;
@@ -186,6 +191,7 @@
 			color: #5E5F74;
 			@media(max-width: 992px){
 				text-align: center;
+				font-size: 1.1em;
 			}
 			span{
 				font-size: 1.125em;
@@ -286,6 +292,7 @@
 
 		@media (max-width: 992px) {
 			bottom: 0;
+			width: 100%;
 		}
 		@media(max-width: 992px){
 			margin-right: auto;
@@ -324,6 +331,10 @@
 	.progress-block{
 		max-width: 11.5em;
 		padding-top: .3em;
+		@media(max-width: 992px){
+			width: 100%;
+			max-width: unset;
+		}
 		.currency-info{
 
 			display: flex;
@@ -338,12 +349,20 @@
 			font-size: 1em;
 			line-height: .8;
 			margin-right: 3px;
+			@media (max-width: 992px) {
+			font-size: 1.1em;
+			    margin-right: 6px;
+
+			}
 		}
 		.currency-name{
 			font-weight: 500;
 			font-size: .6em;
 			color: #5E5F74;
 			line-height: 1;
+			@media (max-width: 992px) {
+				font-size: 1em;
+			}
 		}
 		.percentage{
 			margin-left: auto;
@@ -355,6 +374,9 @@
 				line-height: 1;
 
 				color: #237BEF;
+				@media (max-width: 992px) {
+					    font-size: .9em;
+				}
 			}
 		}
 		.currency-bar{
