--- a/src/assets/scss/pages/ieo/_ieo-info.scss
+++ b/src/assets/scss/pages/ieo/_ieo-info.scss
@@ -1,7 +1,10 @@
 .ieo_info{
-	max-width: calc(73.7em + 40px);
+	max-width: 1464px;
 	margin: 0 auto;
-	padding: 1em 20px;
+	    padding: 1em 31px 1em 95px;
+	@media(max-width: 1200px){
+		padding: 1em 15px 1em;
+	}
 	@media (max-width: 992px) {
 		font-size: 1.1em;
 	}
@@ -10,7 +13,7 @@
 		box-shadow: 0px 4px 19px rgba(0, 0, 0, 0.25);
 		border-radius: 4px;
 		color: #191A39;
-		padding: 5em 5.5em 0;
+		        padding: 4.2em 4.8em 0;
 		@media (max-width: 992px) {
 			padding: 1.5em 1em;
 		}
@@ -18,14 +21,14 @@
 	.text-info-block{
 		margin-bottom: 3.05em;
 		&+.text-info-block{
-			margin-bottom: 2.7em;
+			    margin-bottom: 2.4em;
 		}
 		@media (max-width: 992px) {
 			margin-bottom: 2em;
 		}
 	}
 	h4{
-		font-size: 2em;
+		font-size: 1.75em;
 		text-transform: uppercase;
 		color: #000000;
 		letter-spacing: .03em;
@@ -38,14 +41,15 @@
 	}
 	p{
 		line-height: 1.67;
+		    font-size: .89em;
 	}
 	.features-list{
-		margin-top: 2.45em;
+		margin-top: 2em;
 	}
 	.features-list-item{
 		padding-left: .9em;
 		position: relative;
-		margin-bottom: .66em;
+		margin-bottom: .46em;
 		&::before{
 			content: "";
 			position: absolute;
@@ -72,7 +76,7 @@
 			padding-top: 1em;
 		}
 		.rating-title{
-			margin-bottom: 4em;
+			margin-bottom: 3.65em;
 			@media(max-width: 992px){
 				margin-bottom: 1em;
 			}
@@ -137,8 +141,9 @@
 	}
 	.rating-title-item{
 		text-align: center;
+		line-height: 1.1;
 		span{
-			font-size: .7em;
+			font-size: .6em;
 			line-height: normal;
 			text-transform: uppercase;
 			font-variant: small-caps;
@@ -148,10 +153,11 @@
 	}
 	.rating-value{
 		font-weight: 500;
-		font-size: 2em;
+		font-size: 1.8em;
 		text-transform: uppercase;
 		color: #C4C4C4;
 		text-align: center;
+		line-height: 1.2em;
 	}
 	.current-rating{
 
@@ -167,11 +173,11 @@
 	padding-bottom: 1.7em;
 }
 .allocation{
-	    padding-top: 2.8em;
-    padding-bottom: 1.8em;
+	padding-top: 2.8em;
+	padding-bottom: 1.8em;
 }
 .allocation-graph{
-	// overflow: hidden;
+	text-align: center;
 	img{
 		max-width: 100%;
 
