--- a/src/assets/scss/pages/ieo/_ieo-requirements.scss
+++ b/src/assets/scss/pages/ieo/_ieo-requirements.scss
@@ -1,11 +1,21 @@
 .ieo-requirements{
+	.requirement-text-wr{
+		@media(min-width: 1201px){
+		width: calc(100% - 20em);
+	}
+	}
 	.ieo-requirements-wr{
-		max-width: calc(73.7em + 40px);
+		// width: calc(73.7em + 40px);
 		margin: 0 auto;
-		padding: 1.3em 20px;
+		max-width: 1464px;
+		padding: 1.15em 30px 1.3em 94px;
+
+		@media(max-width: 1200px){
+			padding: 1em 15px;
+		}
+
 		@media(max-width: 992px){
 			font-size: 1.1em;
-			padding-top: 1em;
 		}
 	}
 	.title-part{
@@ -15,7 +25,7 @@
 			margin-bottom: 1.5em;
 		}
 		h3{
-			font-size: 1.37em;
+			font-size: 1.22em;
 		}
 	}
 	.requirements-table{
@@ -27,7 +37,7 @@
 	
 	.requirement-item {
 		display: flex;
-		padding: 1.5em 1.6em;
+		padding: 1.7em 1.6em;
 		justify-content: space-between;
 		align-items: center;
 		@media(max-width: 992px){
@@ -84,6 +94,12 @@
 		max-width: 44em;
 		margin-right: 20px;
 		width: 100%;
+		&:not(#requirement-text){
+			@media(min-width: 1201px){
+
+			width: calc(100% - 20em);
+			}
+		}
 		@media(max-width: 992px){
 			max-width: unset;
 			margin-bottom: 0;
