--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -170,7 +170,7 @@
 
     <div class="send__line"></div>
 
-    <ng-container *ngIf="fiatInfoByName.maxDailyRequestSum > 0">
+    <ng-container *ngIf="fiatInfoByName.leftRequestSum > 0">
       <div class="send__info">
         <div class="send__info-row">
           <div class="send__info-title">{{'You want to withdraw:' | translate}}</div>
@@ -209,7 +209,7 @@
       </button>
     </ng-container>
 
-    <ng-container *ngIf="fiatInfoByName.maxDailyRequestSum == 0">
+    <ng-container *ngIf="fiatInfoByName.leftRequestSum == 0">
       <div class="withdraw-limit-error">
         {{'Your daily output limit for this currency has been exceeded. Please try again tomorrow.' | translate}}
       </div>
