--- a/src/assets/scss/pages/ieo/_ieo-header.scss
+++ b/src/assets/scss/pages/ieo/_ieo-header.scss
@@ -76,7 +76,9 @@
 		.sell-progress{
 			margin-right: 12px;
 			position: relative;
-
+			@media(max-width: 992px){
+				margin-right: -4px;
+			}
 			svg{
 				display: block;
 				path{
@@ -144,6 +146,7 @@
 			margin: 0 1.1em;
 			@media(max-width: 992px){
 				margin-right: 0;
+				margin-top: -5px;
 			}
 			.wrapper-ieo-btn {
 				position: relative;
