--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -90,6 +90,13 @@
           </li>
           <li class="menu__item" routerLinkActive="menu__link--active">
             <ng-container>
+              <a class="menu__link" routerLink="/fiat">
+                <span class="menu__link-text">{{'FIAT' | translate}}</span>
+             </a>
+            </ng-container>
+          </li>
+          <li class="menu__item" routerLinkActive="menu__link--active">
+            <ng-container>
                <a class="menu__link" href="https://support.exrates.me" target="blank">
                  <span class="menu__link-text">{{'Support' | translate}}</span>
                </a>
