--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -77,3 +77,4 @@
 @import "pages/ieo/_ieo-policy.scss";
 @import "pages/partner-news/_partner-news.scss";
 @import "pages/ieo/_common-ieo.scss";
+@import "pages/ieo/_kyc-banner.scss";
