--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -217,26 +217,26 @@
 
     <!--uncomment when the translation is ready-->
 
-     <!--<ul class="menu language">-->
-      <!--<li class="menu__item menu__item&#45;&#45;with-submenu menu__item&#45;&#45;disabled">-->
-        <!--<a class="menu__link">-->
-          <!--<span class="menu__link-text">-->
-             <!--<img class="language__flag" [src]="lang.icon_url" alt="ru">-->
-             <!--<span>{{lang.fullName}}</span>-->
-          <!--</span>-->
-        <!--</a>-->
-         <!--<div class="submenu submenu&#45;&#45;language">-->
-          <!--<ul class="menu__list submenu__list submenu__list&#45;&#45;language">-->
-            <!--<li class="submenu__item" *ngFor="let lang of langArray | excludeByField:'name':lang.name">-->
-              <!--<a class="submenu__link" (click)="changeLocalization(lang.name)" >-->
-                <!--<img class="language__flag" [src]="lang.icon_url" alt="">-->
-                <!--<span class="language__text">{{lang.fullName | translate}}</span>-->
-                <!--</a>-->
-                <!--</li>-->
-          <!--</ul>-->
-        <!--</div>-->
-      <!--</li>-->
-    <!--</ul>-->
+     <ul class="menu language">
+      <li class="menu__item menu__item--with-submenu menu__item--disabled">
+        <a class="menu__link">
+          <span class="menu__link-text">
+             <img class="language__flag" [src]="lang.icon_url" alt="ru">
+             <span>{{lang.fullName}}</span>
+          </span>
+        </a>
+         <div class="submenu submenu--language">
+          <ul class="menu__list submenu__list submenu__list--language">
+            <li class="submenu__item" *ngFor="let lang of langArray | excludeByField:'name':lang.name">
+              <a class="submenu__link" (click)="changeLocalization(lang.name)" >
+                <img class="language__flag" [src]="lang.icon_url" alt="">
+                <span class="language__text">{{lang.fullName | translate}}</span>
+                </a>
+                </li>
+          </ul>
+        </div>
+      </li>
+    </ul>
 
     <div class="translate">
       <button class="translate__trigger">
@@ -355,6 +355,23 @@
           <a class="menu-mob__link" (click)="mobileLinkClick()" routerLink="/funds/balances">{{'Balance' | translate}}</a>
         </div>
       </div>
+
+        <div class="menu-mob__drop-wrap">
+          <a class="menu-mob__link menu-mob__link--drop" (click)="toggleMenuDropdowns(NGX_TRANSLATE_FLAG)" [ngClass]="{'menu-mob__link--active': ngxTranslateList}"
+             routerLink="/funds/balances">
+            <span class="menu-mob__link-text">
+              <img class="language__flag" [src]="lang.icon_url" alt="ru">
+             <span>{{lang.fullName}}</span>
+            </span>
+          </a>
+          <div class="menu-mob__wrap-links" *ngIf="ngxTranslateList">
+            <a class="menu-mob__link" (click)="mobileLinkClick(lang.name)" *ngFor="let lang of langArray | excludeByField:'name':lang.name">
+              <img class="language__flag" [src]="lang.icon_url" alt="">
+              <span class="language__text">{{lang.fullName | translate}}</span>
+            </a>
+          </div>
+        </div>
+
 
       <div class="menu-mob__drop-wrap">
         <a class="menu-mob__link menu-mob__link--drop" (click)="toggleMenuDropdowns(TRANSLATE_FLAG)" [ngClass]="{'menu-mob__link--active': translateList}">
