--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1123,6 +1123,14 @@
 }
 
 // TEMP STYLES
+.submenu.submenu--language {
+  top: 45px !important;
+}
+
+.language__text {
+  color: #a0a0a0 !important;
+}
+
 .d-none {
   display: none !important;
 }
