--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -197,7 +197,7 @@
           <th class="table__cell-head table__cell-head--tal" style="width: 60px;"></th>
           <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Limit price'| translate}}</th>
           <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Stop price'| translate}}</th>
-          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Comission'| translate}}</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Commission'| translate}}</th>
           <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Total'| translate}}</th>
           <th class="table__cell-head table__cell-head--tal" style="width: 80px;"></th>
         </tr>
