--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -264,7 +264,7 @@
           <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Limit price' | translate}}</th>
           <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Stop price' | translate}}</th>
           <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Amount' | translate}}</th>
-          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Comission' | translate}}</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Commission' | translate}}</th>
           <th class="table__cell-head table__cell-head--sort table__cell-head--tar">{{'In total' | translate}}</th>
           <th class="table__cell-head table__cell-head--sort table__cell-head--tar">{{'Status' | translate}}</th>
         </tr>
