--- a/src/app/fiat/fiat.component.html
+++ b/src/app/fiat/fiat.component.html
@@ -1,3 +1,133 @@
-<p>
-  fiat works!
-</p>
+<div class="fiat-page">
+	<div class="fiat-inner">
+		<div class="fiat-fs">
+			<div class="fs-image-container">
+				<img src="assets/img/fiat-fs-bg.png" alt="">
+			</div>
+			<div class="fs-wr">
+				<div class="title-wr">
+					<h2>Open account for $20 and get 0% commission</h2>
+				</div>
+				<div class="description-wr">
+					<p>on outgoing payments in the Singapore Bank</p>
+				</div>
+				<div class="button-wr">
+					<a href="#" class="standart-btn" target="blank"><span>Open an Account now</span></a>
+				</div>
+			</div>
+		</div>
+		<div class="fiat-benefits">
+			<div class="head-part">
+				<h3>Benefits</h3>
+			</div>		
+			<div class="benefits-items-wr">
+				<div class="benefits-item">
+					<div class="title-part">
+						<h3>24 Fiat Currencies</h3>
+					</div>
+					<div class="description-part">
+						<p>Deposits and withdrawals via SWIFT / SEPA for 24 fiat currencies</p>
+					</div>			
+				</div>
+				<div class="benefits-item">
+					<div class="title-part">
+						<h3>$50,000 Limit </h3>
+					</div>
+					<div class="description-part">
+						<p>$50,000 deposit/withdrawal limit for a day</p>
+					</div>			
+				</div>
+				<div class="benefits-item">
+					<div class="title-part">
+						<h3>231 Countries </h3>
+					</div>
+					<div class="description-part">
+						<p>We work with 231 countries </p>
+					</div>			
+				</div>
+				<div class="benefits-item pg-small">
+					<div class="title-part">
+						<h3>1% Commission</h3>
+					</div>
+					<div class="description-part">
+						<p>1% commission on account deposits</p>
+					</div>			
+				</div>
+				<div class="benefits-item pg-small">
+					<div class="title-part">
+						<h3>0% Transfer Fee</h3>
+					</div>
+					<div class="description-part">
+						<p>0% transfer fee between personal and trading account on Exrates</p>
+					</div>			
+				</div>
+				<div class="benefits-item-large">
+					<div class="title-part">
+						<h3>$150,000 For VIP clients</h3>
+					</div>
+					<div class="description-part">
+						<p>Up to $ 150,000 limit for deposits and withdrawals for VIP clients</p>
+					</div>	
+					<div class="button-wr">
+						<a href="#" class="standart-btn white-variant" target="blank"><span>Become a VIP</span></a>
+					</div>			
+				</div>
+
+			</div>
+		</div>
+		<div class="how-work">
+			<div class="head-part">
+				<h3>How does ot work?</h3>
+			</div>
+			<div class="how-work-item-wr">
+				<div class="how-work-item">
+					<div class="arr">
+						<img src="assets/img/arr-fiat.svg" alt="">
+					</div>
+					<div class="stage-number">
+						<span>1</span>
+					</div>
+					<div class="title-part">
+						<h5>Open Exrates account</h5>
+					</div>
+					<div class="description-part">
+						<p>Still don’t have Exrates account?</p>
+					</div>
+					<div class="link-part">
+						<a href="#">Create account now →</a>
+					</div>
+				</div>
+				<div class="how-work-item">
+					<div class="arr">
+						<img src="assets/img/arr-fiat.svg" alt="">
+					</div>
+					<div class="stage-number">
+						<span>2</span>
+					</div>
+					<div class="title-part">
+						<h5>Pass KYC</h5>
+					</div>
+				</div>
+				<div class="how-work-item">
+					<div class="stage-number">
+						<span>3</span>
+					</div>
+					<div class="title-part">
+						<h5>Get your personal FUG<br>account!</h5>
+					</div>
+				</div>
+
+			</div>
+		</div>
+		<div class="add-info">
+			<div class="add-info-wr">
+				<div class="left-part">
+					<p>This is your personal account which you can use for instant fiat transfers to your Exrates trading account.</p>
+				</div>
+				<div class="right-part">
+					<p>A more detailed description of the conditions is available on our financial partner page - <a href="#">FUG</a>.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
