--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -77,3 +77,7 @@
 @import "pages/ieo/_ieo-policy.scss";
 @import "pages/partner-news/_partner-news.scss";
 @import "pages/ieo/_common-ieo.scss";
+
+
+//fiat
+@import "pages/fiat/_fiat-fs.scss";
