--- a/src/app/ieo/components/ieo-header/ieo-header.component.html
+++ b/src/app/ieo/components/ieo-header/ieo-header.component.html
@@ -57,6 +57,7 @@
         <button
           class="btn btn-blue btn-ieo"
           (click)="goToNewsPage()"
+          [disabled]="currentStage === stage.TERMINATED"
           *ngIf="isAuthenticated && (currentStage === stage.SUCCEEDED || currentStage === stage.FAILED || currentStage === stage.TERMINATED)"
         >
           <span>{{'More' | translate}}</span>
