--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -37,7 +37,10 @@
 
   <app-ieo-how-it-works></app-ieo-how-it-works>
 
-  <app-ieo-descriptions [description]="ieoData.description"></app-ieo-descriptions>
+  <app-ieo-descriptions
+    [description]="ieoData.description"
+    [ieoToken]="IEOData.currencyDescription"
+  ></app-ieo-descriptions>
 
   <app-popup-failed
     *ngIf="showNoReqs"
