--- a/src/assets/scss/pages/fiat/_fiat-fs.scss
+++ b/src/assets/scss/pages/fiat/_fiat-fs.scss
@@ -28,7 +28,7 @@
 			top: -20%;
 			position: relative;
 			@media(max-width: 992px){
-				height: 100%;
+				// height: 100%;
 				min-height: unset;
 				position: absolute;
 				top: -100%;
@@ -130,6 +130,14 @@
 		margin: 0 auto;
 		.head-part{
 			margin-bottom: 2.1em;
+			@media(max-width: 992px){
+				font-size: 1.15em;
+
+			}
+			@media(max-width: 520px){
+				font-size: 1.3em;
+
+			}
 			h3{
 				font-weight: 500;
 				font-size: .9em;
@@ -142,6 +150,14 @@
 			display: flex;
 			flex-wrap: wrap;
 			align-items: flex-start;
+			@media(max-width: 992px){
+				font-size: 1.15em;
+
+			}
+			@media(max-width: 520px){
+				font-size: 1.3em;
+
+			}
 		}
 		.benefits-item{
 			width: 33.333%;
@@ -150,6 +166,23 @@
 			border: 1px solid #1D365A;
 			margin-left: -1px;
 			margin-top: -1px;
+			@media(max-width: 992px){
+				width: 50%;
+				
+			}
+			@media(max-width: 520px){
+				width: 100%;
+				text-align: center;
+				padding: 0;
+				min-height: auto;
+				border: none;
+				margin: 0 auto 2em;
+				max-width: 15em;
+				&.pg-small{
+					padding: 0;
+				}
+				
+			}
 			&.pg-small{
 				padding: 1.1em 1.25em;
 			}
@@ -169,6 +202,10 @@
 					font-size: .75em;
 					line-height: 1.2;
 					color: #FFFFFF;
+					@media(max-width: 520px){
+						max-width: unset;
+
+					}
 				}
 			}
 		}
@@ -181,6 +218,15 @@
 			box-shadow: 0px 4px 29px rgba(0, 0, 0, 0.52);
 			position: relative;
 			min-height: 9.6em;
+			@media(max-width: 992px){
+				width: 50%;
+				
+			}
+			@media(max-width: 520px){
+				width: 100%;
+				text-align: center;
+				
+			}
 			.title-part{
 				margin-bottom: 1.55em;
 				h3{
@@ -197,11 +243,15 @@
 					font-size: .75em;
 					line-height: 1.2;
 					color: #FFFFFF;
+
 				}	
 			}
 			.button-wr{
 				width: 11em;
 				margin: 0;
+				@media(max-width: 520px){
+					margin: 0 auto;				
+				}
 				a{
 					background: #fff;
 					padding: .77em;
@@ -211,6 +261,10 @@
 					font-size: .7em;
 					font-weight: 500;
 					color: #006AFF;
+					@media(max-width: 992px){
+						font-size: 1.1em;
+
+					}
 				}
 			}
 		}
@@ -221,6 +275,14 @@
 		margin: 0 auto;
 		.head-part{
 			margin-bottom: 2.2em;
+			@media(max-width: 992px){
+				font-size: 1.15em;
+
+			}
+			@media(max-width: 520px){
+				font-size: 1.3em;
+
+			}
 			h3{
 				font-weight: 500;
 				font-size: .9em;
@@ -231,6 +293,19 @@
 		}
 		.how-work-item-wr{
 			display: flex;
+			@media(max-width: 992px){
+				font-size: 1.15em;
+
+			}
+			@media(max-width: 780px){
+				flex-direction: column;
+				padding-bottom: 1.5em;
+
+			}
+			@media(max-width: 520px){
+				font-size: 1.3em;
+
+			}
 		}
 		.arr{
 			width: 1.05em;
@@ -240,6 +315,10 @@
 			top: 0;
 			bottom: 0;
 			margin: auto;
+			@media(max-width: 780px){
+				display: none;
+
+			}
 			img{
 				width: 100%;
 			}
@@ -253,8 +332,27 @@
 			border-radius: 4px;
 			padding: .75em 1.2em 1.25em;
 			margin-bottom: 2em;
+			@media(max-width: 780px){
+				width: 100%;
+				margin-bottom: 2em;
+				text-align: center;
+				padding: 0;
+				box-shadow: none;
+				background: transparent;
+				box-shadow: none;
+				border-radius: 0;
+				padding: 0;
+				br{
+					display: none;
+				}
+
+			}
 			&:not(:last-child){
 				margin-right: 3.4em;
+				@media(max-width: 780px){
+					margin-right: 0;
+
+				}
 			}
 		}
 		.stage-number{
@@ -297,6 +395,14 @@
 		padding: 0 15px;
 		max-width: 1074px;
 		margin: 0 auto;
+		@media(max-width: 992px){
+			font-size: 1.15em;
+
+		}
+		@media(max-width: 520px){
+			font-size: 1.3em;
+
+		}
 		.add-info-wr{
 			border: 1px dashed #7FAFF3;
 			box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.1);
@@ -305,18 +411,34 @@
 			padding-bottom: .9em;
 			display: flex;
 			justify-content: center;
+			@media(max-width: 520px){
+				flex-direction: column;
+				padding: 0;
+				border: none;
+				text-align: center;
+			}
 		}
 		.left-part{
 			max-width: 23.3em;
 			width: 100%;
 			min-height: 3.35em;
 			border-right: 1px solid #C4C4C4;
+			@media(max-width: 520px){
+				max-width: 14em;
+				margin: 0 auto .7em;
+				border: none;
+			}
 			p{
+				margin-right: 2.45em;
 				max-width: 27em;
 				font-weight: 500;
 				font-size: .75em;
 				line-height: 1.2;
 				color: #FFFFFF;
+				@media(max-width: 520px){
+					margin-right: 0;
+					max-width: unset;
+				}
 			}
 		}
 		.right-part{
@@ -324,13 +446,22 @@
 			min-height: 3.35em;
 			display: flex;
 			width: 100%;
+			justify-content: flex-end;
+			@media(max-width: 520px){
+				max-width: 14em;
+				margin: 0 auto .7em;
+			}
 			p{
-				margin-left: auto;
+				margin-left: 2.49em;
 				max-width: 27.8em;
 				font-weight: 500;
 				font-size: .75em;
 				line-height: 1.2;
 				color: #C4C4C4;
+				@media(max-width: 520px){
+					margin-left: 0;
+					max-width: unset;
+				}
 				a{
 					color: #237BEF;
 
